<resources>


    <string name="app_name">Zakazi me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Podesavanja</string>
    <string name="title_activity_login">Prijava na sistem</string>
    <string name="prompt_ime">Ime</string>
    <string name="prompt_korisnickoime">Korisnicko ime</string>
    <string name="poklapanje_pass">Ne poklapaju se loznike</string>
    <string name="prompt_prezime">Prezime</string>
    <string name="register_string">Registruj se</string>
    <string name="login_string">Prijavi se</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="prompt_confirmed_password">Potvrdi lozinku</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Prijavi se</string>
    <string name="error_invalid_email">Nepravilno uneta email adresa</string>
    <string name="error_invalid_password">Lozinka mora da ima minimum 4 cifre</string>
    <string name="error_incorrect_password">Netacna lozinka</string>
    <string name="error_field_required">Obavezno polje</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Podesavanja</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Opste</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Izmeni korisnicko ime</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="promeni_lozinku">Izmeni lozinku</string>
    <string name="odjava">Odjavi se</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string name="obavestenja">Koliko ranije zelite da budete obavesteni?</string>
    <string-array name="obavestenja_values">

        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>tad</item>

    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Belle Femme frizerski salon</item>
        <item>X style kozmeticki salon</item>
        <item>Words and friends skola jezika</item>
        <item>Privatni casovi matematike</item>

    </string-array>


    <string-array name="prazan_red">
        <item></item>

    </string-array>

    <string-array name="prazni_redovi">
        <item></item>
        <item></item>
        <item></item>
        <item></item>

    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="emailnepostojeci">Ne postoji ovaj korisnik</string>
    <string name="passnepostojeci">Nije dobar password</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifikacije</string>

    <string name="pref_title_new_message_notifications">Obavestavaj me</string>

    <string name="pref_title_ringtone">Ton</string>
    <string name="pref_ringtone_silent">Bez tona</string>

    <string name="pref_title_vibrate">Vibracija</string>
    <string name="title_activity_moja_zakazivanja">MojaZakazivanjaActivity</string>
    <string name="tab_text_1">Aktivna zakazivanja</string>
    <string name="tab_text_2">Prethodna zakazivanja</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_detail_view">DetailViewActivity</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="radno_vreme"><b><i>Ponedeljak - Petak: </i></b> 09:00 - 18:00 </string>
    <string name="radno_vremeSubota"><b><i>Subota: </i></b> 09:00 - 15:00 </string>
    <string name="radno_vremeNedelja"><b><i>Nedelja: </i></b> Neradna </string>
    <string name="izaberiSliku">izmeniSliku</string>
    <string name="title_activity_change_profile_image">ChangeProfileImageActivity</string>
    <string name="promeni_sliku">Izmeni profilnu sliku</string>
    <string name="promeni_sliku_summary">Izmeni profilnu sliku</string>
</resources>
